--- a/Microplastic workflow.Rmd
+++ b/Microplastic workflow.Rmd
@@ -1257,12 +1257,12 @@ Error: no more error handlers available (recursive errors?); invoking 'abort' re
 
 ==> have to reduce feature 
 ==> After feature reduction => - Imputation with Zeros => not significant
-Df    Sum Sq   Mean Sq F value Pr(>F)
+            Df    Sum Sq   Mean Sq F value Pr(>F)
 Subcategory 11 2.100e-30 1.913e-31   0.471  0.916
 Residuals   84 3.411e-29 4.061e-31 
 
 - ICP (with USE only) - without feature reduction -> not significant
- Df    Sum Sq   Mean Sq F value Pr(>F)
+            Df    Sum Sq   Mean Sq F value Pr(>F)
 Subcategory 11 3.567e-30 3.243e-31    1.34  0.266
 Residuals   23 5.567e-30 2.420e-31 
 
@@ -1272,7 +1272,7 @@ Error: no more error handlers available (recursive errors?); invoking 'abort' re
 
 ==> have to reduce feature 
 ==> After feature reduction => - Imputation with Zeros =>  Significant!!
-Df    Sum Sq   Mean Sq F value   Pr(>F)    
+              Df    Sum Sq   Mean Sq F value   Pr(>F)    
 Subcategory  18 1.404e-28 7.798e-30   2.745 0.000658 ***
 Residuals   109 3.097e-28 2.841e-30                     
 
@@ -1518,18 +1518,17 @@ for (plt in unique(adjusted_df$plastic_type)) {
 
 
 
-### What are the top compounds that have highest abundance in each plastic "Subcategory" and what are their identity (matched with EF suspect screening)?
+# What are the top compounds that have highest abundance in each plastic "Subcategory" and what are their identity (matched with EF suspect screening)?
 
+### Loading reference databases
 ```{r class.source = 'fold-hide', echo=FALSE, warning = FALSE, message=FALSE}
 # Read in suspect screening result from Eric // PlasticMAP // PlastChem database
 sus_scr <- readxl::read_xlsx(path = paste0(getwd(), "/data/PMT Suspect Screening Plastics Results EF.xlsx"), skip = 1)
 plasticmap <- readxl::read_xlsx(path = paste0(getwd(), "/data/PlasticMAP_S1_210611.xlsx"), sheet = "S8 - PlasticMAP")
-plastchem <- readxl::read_xlsx(path = paste0(getwd(), "/data/plastchem_db_v1.0.xlsx"), sheet = "Full database")
-  
+plastchem_redlist <- readxl::read_xlsx(path = paste0(getwd(), "/data/plastchem_db_v1.0.xlsx"), sheet = "Red List")
+
 # Remove all legacy empty rows from Eric's Excel file 
 sus_scr <- sus_scr[rowSums(is.na(sus_scr)) != (ncol(sus_scr) - 1), ]
-
-
 ```
 
 ## Extract top Normalized Height compounds for each sample from HPLC only data
@@ -1737,6 +1736,203 @@ ggplot(data = joined, aes(x = Subcategory, y = Values, fill = pubchem_name)) +
   guides(fill=guide_legend(ncol=2))
 ```
 
+# Matching ML Classifier's Top contributions
+## Merge Top 10 contribution features from RF and GBM
+```{r class.source = 'fold-hide', echo=FALSE, warning = FALSE, message=FALSE}
+library(openxlsx)
+setwd("C:/Users/huyng/OneDrive - Toronto Metropolitan University/Microplastic/Microplastic-Fingerprinting/RF_gbm_hplc_feature_imp")
+
+file_list <- list.files(pattern = '*.xlsx')
+
+df_list <- purrr::map(file_list, ~ read.xlsx(.x, rows = 1:10))
+
+top_contrib_rf_gbm <- bind_rows(df_list) %>% mutate(Feature = feature_name)
+```
+
+## Get unique RT and m/z of the top contributions
+```{r class.source = 'fold-hide', echo=FALSE, warning = FALSE, message=FALSE}
+all_unique <- data.frame(comp = unique(top_contrib_rf_gbm$feature_name))
+
+# Adding RT and molecular ions info of significant compounds:
+mean_rt <- c()
+mean_mz <- c()
+for (row in 1:nrow(all_unique)) {
+  idx <- base::which(hplc_list[[1]]$Feature == all_unique[row,])
+  mean_rt <- c(mean_rt, round(mean(hplc_list[[1]][idx, ]$RT), 4))
+  mean_mz <- c(mean_mz, round(mean(hplc_list[[1]][idx, ]$m.z), 4))
+}
+
+all_unique$mean_rt <- mean_rt
+all_unique$mean_mz <- mean_mz
+```
+
+## A. EF's Suspect Screening 
+
+### Find in all_unique the compounds that match with suspect hit list in all_unique with molecular ions in the range of +- 0.0005
+```{r class.source = 'fold-hide', echo=FALSE, warning = FALSE, message=FALSE}
+df_list <- list()
+i <- 1
+
+for (suspect_mz in unique(sus_scr$`[M+H]+`)) {
+  # if the of the feature fall into the windows +-0.0005 of suspect, then fetch all row in sus_scr that match
+  idx <- which(all_unique$mean_mz <= (suspect_mz + 0.0005) & all_unique$mean_mz >= (suspect_mz - 0.0005))
+  # If not found any match in Suspect screening list then next
+  if (base::identical(idx, integer(0))) {
+    next
+  } else {
+    temp <- sus_scr[which(sus_scr$`[M+H]+` == suspect_mz),]
+    temp$Feature <- paste(all_unique[idx,]$comp, collapse = ', ')
+    df_list[[i]] <- temp[1,] # here we just need 1 row of suspect name and corresponding Feature
+    i <- i + 1
+  }
+}
+
+all_matching_sus_scr <- bind_rows(df_list)
+View(all_matching_sus_scr)
+```
+
+### Stacked bar plot of compound match with EF's Suspect Screening 
+```{r class.source = 'fold-hide', echo=FALSE, warning = FALSE, message=FALSE}
+# Replace all the compounds in plot_df with suspect screening matches 
+joined <- left_join(df_percentage %>% 
+                      pivot_longer(cols = 2:ncol(.), names_to = "Feature", values_to = "Values") %>%
+                      dplyr::select(Subcategory, Feature, Values), 
+                    all_matching_sus_scr %>%
+                      dplyr::select(Feature, `Suspect Name`), by = "Feature") %>%
+  dplyr::filter(!is.na(`Suspect Name`)) %>%
+  # group and calculate the mean of Features with same subcategory
+  group_by(Feature, `Suspect Name`, Subcategory) %>%
+  dplyr::summarise(across(Values, base::mean))
+
+ggplot(data = joined, aes(x = Subcategory, y = Values, fill = `Suspect Name`)) +
+  geom_bar(stat = "identity") +
+  labs(title = "", x = "Plastic product types", y = "Normalized Peak Height (%)",
+       fill = "Top hits with database") +
+  theme_minimal(base_size = 25) +
+  theme(axis.text.x = element_text(angle = 90, hjust =0.5, vjust = 0.25, color = "black", face = "bold"), 
+        axis.ticks.length.x = unit(0, "cm"),
+        legend.position = 'bottom',
+        panel.grid.minor.x = element_blank(),
+        panel.grid.minor.y = element_blank()) + 
+  scale_y_continuous(expand = c(0,0)) +
+  guides(fill=guide_legend(ncol=2))
+```
+
+# B. PlasticMap (Wiesinger et. al.) 
+```{r class.source = 'fold-hide', echo=FALSE, warning = FALSE, message=FALSE}
+df_list <- list()
+i <- 1
+
+for (mz in unique(na.omit(plasticmap$Mass))) {
+  # if the of the feature fall into the windows +-0.0005 of suspect in database, then fetch all row in sus_scr that match
+  idx <- which(all_unique$mean_mz <= (mz + 0.001) & all_unique$mean_mz >= (mz - 0.001))
+  # If not found any match in Suspect screening list then next
+  if (base::identical(idx, integer(0))) {
+    next
+  } else {
+    temp <- plasticmap[which(plasticmap$Mass == mz),]
+    temp$Feature <- paste(all_unique[idx,]$comp, collapse = ', ')
+    df_list[[i]] <- temp[1,] # here we just need 1 row of suspect name and corresponding Feature
+    i <- i + 1
+  }
+}
+
+all_matching_sus_scr_plasticmap <- bind_rows(df_list)
+View(all_matching_sus_scr_plasticmap)
+```
+
+### Stacked bar plot of compound match with PlasticMap 
+```{r class.source = 'fold-hide', echo=FALSE, warning = FALSE, message=FALSE}
+# Replace all the compounds in plot_df with suspect screening matches 
+joined <- left_join(df_percentage %>% 
+                      pivot_longer(cols = 2:ncol(.), names_to = "Feature", values_to = "Values") %>%
+                      dplyr::select(Subcategory, Feature, Values), 
+                    all_matching_sus_scr_plasticmap %>%
+                      dplyr::select(Feature, `Substance Name`), by = "Feature") %>%
+  dplyr::filter(!is.na(`Substance Name`)) %>%
+  # group and calculate the mean of Features with same subcategory
+  group_by(Feature, `Substance Name`, Subcategory) %>%
+  dplyr::summarise(across(Values, base::mean))
+
+ggplot(data = joined, aes(x = Subcategory, y = Values, fill = `Substance Name`)) +
+  geom_bar(stat = "identity") +
+  labs(title = "", x = "Plastic product types", y = "Normalized Peak Height (%)",
+       fill = "Top hits with database") +
+  theme_minimal(base_size = 15) +
+  theme(axis.text.x = element_text(angle = 90, hjust =0.5, vjust = 0.25, color = "black", face = "bold"), 
+        axis.ticks.length.x = unit(0, "cm"),
+        # legend.text = element_text(size = 18),
+        # legend.title = element_text(size = 20),
+        legend.position = "bottom",
+        panel.grid.minor.x = element_blank(),
+        panel.grid.minor.y = element_blank()) + 
+  scale_y_continuous(expand = c(0,0)) +
+  guides(fill=guide_legend(ncol=2))
+```
+
+### Extract information about Functions and Industrial sectors in which plastics including this chemical suspects might be used
+```{r class.source = 'fold-hide', echo=FALSE, warning = FALSE, message=FALSE}
+writexl::write_xlsx(all_matching_sus_scr_plasticmap[, c(3,23,25)], "plasticmap_suspect_function_industrialsector.xlsx")
+```
+
+
+# C. PlastChem (Hans Peter Arp et. al.) 
+```{r class.source = 'fold-hide', echo=FALSE, warning = FALSE, message=FALSE}
+df_list <- list()
+i <- 1
+
+for (mz in unique(na.omit(plastchem$monoisotopic_mass))) {
+  # if the of the feature fall into the windows +-0.0005 of suspect in database, then fetch all row in sus_scr that match
+  idx <- which(all_unique$mean_mz <= (mz + 0.001) & all_unique$mean_mz >= (mz - 0.001))
+  # If not found any match in Suspect screening list then next
+  if (base::identical(idx, integer(0))) {
+    next
+  } else {
+    temp <- plastchem[which(plastchem$monoisotopic_mass == mz),]
+    temp$Feature <- paste(all_unique[idx,]$comp, collapse = ', ')
+    df_list[[i]] <- temp[1,] # here we just need 1 row of suspect name and corresponding Feature
+    i <- i + 1
+  }
+}
+
+all_matching_sus_scr_plastchem <- bind_rows(df_list)
+View(all_matching_sus_scr_plastchem)
+```
+
+### Extract information about Functions and Industrial sectors in which plastics including this chemical suspects might be used
+```{r class.source = 'fold-hide', echo=FALSE, warning = FALSE, message=FALSE}
+writexl::write_xlsx(all_matching_sus_scr_plastchem[, c(6,212,217)], "plastchem_suspect_function_industrialsector.xlsx")
+```
+
+### Stacked bar plot of compound match with PlastChem 
+```{r class.source = 'fold-hide', echo=FALSE, warning = FALSE, message=FALSE}
+# Replace all the compounds in plot_df with suspect screening matches 
+joined <- left_join(df_percentage %>% 
+                      pivot_longer(cols = 2:ncol(.), names_to = "Feature", values_to = "Values") %>%
+                      dplyr::select(Subcategory, Feature, Values), 
+                    all_matching_sus_scr_plastchem %>%
+                      dplyr::select(Feature, pubchem_name), by = "Feature") %>%
+  dplyr::filter(!is.na(pubchem_name)) %>%
+  # group and calculate the mean of Features with same subcategory
+  group_by(Feature, pubchem_name, Subcategory) %>%
+  dplyr::summarise(across(Values, base::mean))
+
+ggplot(data = joined, aes(x = Subcategory, y = Values, fill = pubchem_name)) +
+  geom_bar(stat = "identity") +
+  labs(title = "", x = "Plastic product types", y = "Normalized Peak Height (%)",
+       fill = "Top hits with database") +
+  theme_minimal(base_size = 20) +
+  theme(axis.text.x = element_text(angle = 90, hjust =0.5, vjust = 0.25, color = "black", face = "bold"), 
+        axis.ticks.length.x = unit(0, "cm"),
+        # legend.text = element_text(size = 18),
+        # legend.title = element_text(size = 20),
+        legend.position = "bottom",
+        panel.grid.minor.x = element_blank(),
+        panel.grid.minor.y = element_blank()) + 
+  scale_y_continuous(expand = c(0,0)) +
+  guides(fill=guide_legend(ncol=2))
+```
+
 # Statistical fingerprinting
 
 ## Plot Result from ML Classifiers with error bar of Standard deviation from 10 iterations
@@ -1775,7 +1971,6 @@ ggplot(data = df, aes(x = Classifier, y = BA_mean, fill = Technique)) +
 
 ## PCA
 ```{r , echo=FALSE, warning = FALSE, message=FALSE}
-
 data <- df_percentage # readxl::read_excel(paste0(getwd(), "/MLdata_USEonly/icp.xlsx"))
 res.pca <- FactoMineR::PCA(
   data %>% select(-c("Subcategory")),
@@ -1796,8 +1991,8 @@ factoextra::fviz_pca_biplot(res.pca,
                             repel = TRUE,
                             labelsize = 10, 
                             habillage = factor(data$Subcategory),
-                            addEllipses = TRUE,
-                            ellipse.level=0.95,
+                            # addEllipses = TRUE,
+                            # ellipse.level=0.95,
                             ggtheme = ggplot2::theme_minimal(base_size = 30),
                             title = "",
                             # xlim = c(-0.5, 0.5),
@@ -1805,9 +2000,9 @@ factoextra::fviz_pca_biplot(res.pca,
                             ) + 
   guides(fill=guide_legend(ncol=5)) +
   # if has error "Too few points to calculate an ellipse"
-  # ggforce::geom_mark_ellipse(aes(fill = Groups,
-  #                                color = Groups),
-  #                            label.buffer = unit(40, 'mm')) +
+  ggforce::geom_mark_ellipse(aes(fill = Groups,
+                                 color = Groups),
+                             label.buffer = unit(40, 'mm')) +
   theme(legend.position = 'bottom',
         panel.grid.minor.x = element_blank(),
         panel.grid.minor.y = element_blank()
@@ -1847,6 +2042,8 @@ top <- dim_df[1:10,]$Feature
 #                                  ), 
 #                                collapse = "|"), names(test2), value = TRUE)
 
+# Convert units of ICP-MS from  µg/kg to µg/g of samples
+test2[, 3:ncol(test2)] <- test2[, 3:ncol(df)] / 1000
 data_summary <- test2[, c("Subcategory", 
                           top
                           # matching_columns
@@ -1858,9 +2055,9 @@ data_summary <- test2[, c("Subcategory",
 
 ggplot(data = data_summary, aes(x = Subcategory, y = mean, fill = Features)) +
   geom_bar(stat = "identity", position = 'dodge') +
-  geom_errorbar(aes(ymin = mean - sd,
-                    ymax = mean + sd),
-                position = position_dodge(width = 0.9), width = 0.5) +
+  # geom_errorbar(aes(ymin = mean - sd,
+  #                   ymax = mean + sd),
+  #               position = position_dodge(width = 0.9), width = 0.5) +
   # scale_fill_manual(values = c("#a6cee3",
   #                              "#1f78b4",
   #                              "#b2df8a",
@@ -1876,9 +2073,9 @@ ggplot(data = data_summary, aes(x = Subcategory, y = mean, fill = Features)) +
   #                              "#80cdc1",
   #                              "#bf812d",
   #                              "#b15928")) +
-labs(x = "Plastic product group" 
-     # y = "Concentration[ µg/l ]", 
-     # fill = "Trace Metals"
+labs(x = "Plastic product group",
+     y = "Concentration [µg/g of samples]",
+     fill = "Trace Metals"
      ) + 
   theme_classic(base_size = 25) +
   theme(axis.text.x = element_text(angle = 45, hjust = 1, color = "black", face = "bold"),
@@ -1965,15 +2162,17 @@ This exercise does not seems to affect the HCa. Keep in mind that for all 3 case
 # 
 # rownames(hc_df) <- names
 
-hc_df <- icp_subcat %>% select(-c(Subcategory))
+hc_df <- df_percentage %>% select(-c(Subcategory))
 
 
 ## Dissimilarity Indices Calculated by vegan::vegdist()
 hca_samp <- stats::hclust(vegan::vegdist(hc_df,
                                          method = "robust.aitchison")) # Since our data is continous -> canberra // manhattan // aitchison // robust.aitchison
 
+par(cex = 1.25)
+
 plot(hca_samp,
-     labels = icp_subcat$Subcategory,
+     labels = df_percentage$Subcategory,
      hang = -1,
      main = "")
 ```
